--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
-body {
+* {
   margin: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #cad2c5;
 }
+
+* h1 {
+  font-size: 5.5rem;
+}
+
+/* 
+CAD2C5
+84A98C
+52796F
+3992B1
+4FBED3 */
