--- a/src/pages/BmiPage/BmiPage.css
+++ b/src/pages/BmiPage/BmiPage.css
@@ -4,8 +4,8 @@
     justify-content: space-around;
     margin: 0 auto;
     border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
+    background-color: #CAD2C5;
+    padding: 50px;
     width: 85%;
 
 }
@@ -31,7 +31,7 @@ input[type=number], select {
   }
 
 .button-bmi {
-    background-color: #4CAF50; /* Green */
+    background-color: #52796F; /* Green */
     border: none;
     color: white;
     padding: 16px 32px;
@@ -49,11 +49,11 @@ input[type=number], select {
   .button1 {
     background-color: white; 
     color: black; 
-    border: 2px solid #4CAF50;
+    border: 2px solid #52796F;
   }
 
   .button1:hover {
-    background-color: #4CAF50;
+    background-color: #52796F;
     color: white;
   }
 
