--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,3 +1,126 @@
 .homepage-banner {
-    margin-top: 50px;
+    margin: 50px auto;
+    align-items: center;
 }
+
+.about-us {
+    display: block;
+}
+
+.about-us h2 {
+    font-size: 40px;
+    line-height: 1.1;
+    font-weight: 600;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
+
+.about-us  {
+    font-size: 17px;
+    line-height: 1.4;
+    font-weight: 500;
+    margin-bottom: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
+    font-style: normal;
+    box-sizing: border-box;
+}
+
+    .container {
+        display: flex;
+        background-color: #CAD2C5;
+    }
+    
+	.container_image {
+		width: 500px;
+        height: 500px;
+        margin-left: 200px;
+        margin-right: 50px;
+        margin-bottom: 50px;
+        margin-top: 50px;
+	}
+
+    .container p {
+        margin-right: 50px;
+        text-align: left;
+        font-size: 36px;
+        line-height: 50px;
+        margin-top: 100px;
+    }
+
+    /* .container-two {
+        
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
+        justify-content: space-evenly;
+        margin-right: 100px;
+        
+    }
+
+    .container-card{
+        flex-direction: row;
+        justify-content: space-evenly;
+        text-align: center;
+        vertical-align: top;
+        width: 300px;
+        margin-bottom: 50px;
+    } */
+
+    .button-join {
+        background-color: #4CAF50; /* Green */
+        border: none;
+        color: white;
+        padding: 16px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 2px 1px;
+        transition-duration: 0.4s;
+        cursor: pointer;
+        border-radius: 5px;
+        width: 10%;
+        margin-top: 40px;
+      }
+    
+      .button1 {
+        background-color: white; 
+        color: black; 
+        border: 2px solid #4CAF50;
+      }
+    
+      .button1:hover {
+        background-color: #4CAF50;
+        color: white;
+      }
+
+      .container-two {
+        align-items: center;
+        background: #fff;
+        display: flex;
+        justify-content: center;
+        height: 75vh;
+        width: 100vw;
+      }
+      .container-card{
+        align-items: center;
+        background-color: #84A98C;
+        border: 1px solid #52796F;
+        display: flex;
+        height: 400px;
+        justify-content: center;
+        position: relative;
+        width: 400px;
+        z-index: 1000;
+      }
+        .container-card img {
+          object-fit: cover;
+          height: 400px;
+          width: 400px;
+        }
+       
+      
+
+
+
