--- a/src/components/Goal/Goal.css
+++ b/src/components/Goal/Goal.css
@@ -1,49 +1,49 @@
 .goal-form-card {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    text-align: center;
-    margin: 0 auto;
-    gap: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  margin: 0 auto;
+  gap: 20px;
 }
 
-input[type=radio], select {  
-
- width: 14px;
+/* input[type="radio"],
+select {
+  width: 14px;
   height: 14px;
   background-color: #ffa500;
   position: absolute;
-  }
+} */
 
-  .button-goal {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 2px 1px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    border-radius: 5px;
-    width: 10%;
-    margin-top: 40px;
-  }
+.button-goal {
+  background-color: #4caf50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 2px 1px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 10%;
+  margin-top: 40px;
+}
 
-  .button1 {
-    background-color: white; 
-    color: black; 
-    border: 2px solid #4CAF50;
-  }
+.button1 {
+  background-color: white;
+  color: black;
+  border: 2px solid #4caf50;
+}
 
-  .button1:hover {
-    background-color: #4CAF50;
-    color: white;
-  }
+.button1:hover {
+  background-color: #4caf50;
+  color: white;
+}
 
-input[type="date"]{
+/* input[type="date"]{
     background-color: #52796F;
     padding: 10px;
     position: absolute;
@@ -56,13 +56,10 @@ input[type="date"]{
     border: none;
     outline: none;
     border-radius: 5px;
+} */
+::-webkit-calendar-picker-indicator {
+  background-color: #ffffff;
+  padding: 5px;
+  cursor: pointer;
+  border-radius: 3px;
 }
-::-webkit-calendar-picker-indicator{
-    background-color: #ffffff;
-    padding: 5px;
-    cursor: pointer;
-    border-radius: 3px;
-}
-
-
-
