--- a/src/pages/BmiPage/BmiPage.css
+++ b/src/pages/BmiPage/BmiPage.css
@@ -1,70 +1,71 @@
 .bmi-form {
-    display: flex;
-    /* flex-direction: column; */
-    justify-content: space-around;
-    margin: 0 auto;
-    border-radius: 5px;
-    background-color: #CAD2C5;
-    padding: 50px;
-    width: 85%;
-
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: space-around;
+  margin: 0 auto;
+  border-radius: 5px;
+  background-color: #cad2c5;
+  padding: 50px;
+  width: 85%;
 }
 
-input[type=number], select {
-    width: 40%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
+/* input[type="number"],
+select {
+  width: 40%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
 
-  input[type=""], select {
-    width: 40%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
+input[type=""],
+select {
+  width: 40%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+} */
 
 .button-bmi {
-    background-color: #52796F; /* Green */
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 2px 1px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    border-radius: 5px;
-    width: 10%;
-  }
+  background-color: #52796f; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 2px 1px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 10%;
+}
 
-  .button1 {
-    background-color: white; 
-    color: black; 
-    border: 2px solid #52796F;
-  }
+.button1 {
+  background-color: white;
+  color: black;
+  border: 2px solid #52796f;
+}
 
-  .button1:hover {
-    background-color: #52796F;
-    color: white;
-  }
+.button1:hover {
+  background-color: #52796f;
+  color: white;
+}
 
-  .bmi-result {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 25%;
-    border-radius: 0;
-    background: #fff;
-    box-shadow: -2px 2px 7px rgb(0 0 0 / 13%);
-    margin-top: 40px;
-    margin-left: 40%;
-  }
+.bmi-result {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 25%;
+  border-radius: 0;
+  background: #fff;
+  box-shadow: -2px 2px 7px rgb(0 0 0 / 13%);
+  margin-top: 40px;
+  margin-left: 40%;
+}
