--- a/src/components/Goal/Goal.css
+++ b/src/components/Goal/Goal.css
@@ -1,65 +1,82 @@
+.goal-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .goal-form-card {
   display: flex;
   flex-direction: row;
   justify-content: center;
   text-align: center;
   margin: 0 auto;
-  gap: 20px;
+  gap: 50px;
 }
 
-/* input[type="radio"],
-select {
-  width: 14px;
-  height: 14px;
-  background-color: #ffa500;
-  position: absolute;
-} */
+.goal-form-card img:hover {
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+  }
 
-.button-goal {
-  background-color: #4caf50; /* Green */
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 2px 1px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  border-radius: 5px;
-  width: 10%;
-  margin-top: 40px;
-}
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
 
-.button1 {
-  background-color: white;
-  color: black;
-  border: 2px solid #4caf50;
-}
 
-.button1:hover {
-  background-color: #4caf50;
-  color: white;
-}
-
-/* input[type="date"]{
+.form-date {
     background-color: #52796F;
-    padding: 10px;
+    padding: 5px;
     position: absolute;
     transform: translate(-50%,-50%);
     top: 84%;
-    left: 50%;
+    left: 57%;
     font-family: "Roboto Mono",monospace;
     color: #ffffff;
-    font-size: 16px;
+    font-size: 14px;
     border: none;
     outline: none;
     border-radius: 5px;
-} */
+    margin-top: 10px;
+}
+
 ::-webkit-calendar-picker-indicator {
   background-color: #ffffff;
   padding: 5px;
   cursor: pointer;
   border-radius: 3px;
+}
+
+.goal-form > button.control {
+  cursor: pointer;
+  width: 10%;
+  height: 46px;
+  padding: 0 16px;
+  background: #52796F;
+  color: #f9f9f9;
+  border: 0;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: 2px;
+  transition: all 0.375s;
+}
+
+button {
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  margin: 0 auto;
+  margin-top: 30px;
+
 }
