add workout delete button

--- a/src/components/ExerciseCard/ExerciseCard.css
+++ b/src/components/ExerciseCard/ExerciseCard.css
@@ -18,3 +18,11 @@
 .workout-log-name {
   border-bottom: 1px solid #111;
 }
+
+h3:empty {
+  display: none;
+}
+
+h3:has(div) {
+  display: none;
+}
