--- a/src/pages/BmiPage/BmiPage.css
+++ b/src/pages/BmiPage/BmiPage.css
@@ -20,16 +20,11 @@
   box-sizing: border-box;
 }
 
-
-
 .button-bmi {
   background-color: #52796f; /* Green */
-  border: none;
   color: white;
-  padding: 12px 20px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 16px;
   margin: 2px 1px;
   transition-duration: 0.4s;
@@ -55,9 +50,10 @@
   justify-content: center;
   width: 30%;
   border-radius: 5px;
-  background: #52796F;
+  background: #52796f;
   box-shadow: -2px 2px 7px rgb(0 0 0 / 13%);
   margin: 0 auto;
   margin-top: 100px;
   padding: 25px;
+  color: white;
 }
