--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,144 +1,142 @@
 .homepage-banner {
-    margin: 50px auto;
-    align-items: center;
+  margin: 50px auto;
+  align-items: center;
 }
 
 .about-us {
-    display: block;
+  display: block;
 }
 
 .about-us h2 {
-    font-size: 40px;
-    line-height: 1.1;
-    font-weight: 600;
-    margin-bottom: 20px;
-    margin-left: 20px;
+  font-size: 40px;
+  line-height: 1.1;
+  font-weight: 600;
+  margin-bottom: 20px;
+  margin-left: 20px;
 }
 
-.about-us  {
-    font-size: 17px;
-    line-height: 1.4;
-    font-weight: 500;
-    margin-bottom: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
-    font-style: normal;
-    box-sizing: border-box;
+.about-us {
+  font-size: 17px;
+  line-height: 1.4;
+  font-weight: 500;
+  margin-bottom: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
+  font-style: normal;
+  box-sizing: border-box;
 }
 
-    .container {
-        display: flex;
-        flex-direction: column;
-        background-color: #CAD2C5;
-        height: 500px;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #cad2c5;
+  height: 500px;
+  margin-bottom: 50px;
+}
 
-    }
-    
-	.container_content {
-         display: flex;
-         flex-direction: row;
-        justify-content: space-between;
-        margin-left: 50px;
-        margin-top: 50px;
-        margin-bottom: 50px;
-        gap: 50px;
-	}
+.container_content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-left: 50px;
+  margin-top: 50px;
+  gap: 50px;
+}
 
-  .benefits {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-  }
+.benefits {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
 
-    .button-join {
-        background-color: #52796F; /* Green */
-        border: none;
-        color: white;
-        padding: 8px 16px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 2px 1px;
-        transition-duration: 0.4s;
-        cursor: pointer;
-        border-radius: 5px;
-        width: 8%;
-        margin-top: 10px;
-        margin-bottom: 10px;
-      }
-    
-      .button1 {
-        background-color: white; 
-        color: black; 
-        border: 2px solid #52796F;
-      }
-    
-      .button1:hover {
-        background-color: #52796F;
-        color: white;
-      }
+.button-join {
+  background-color: #52796f; /* Green */
+  border: none;
+  color: white;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 2px 1px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 8%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
-      .container-two {
-        align-items: center;
-        background: #fff;
-        display: flex;
-        justify-content: center;
-        height: 65vh;
-        width: 100vw;
-      }
-      .container-card{
-        align-items: center;
-        background-color: #fff;
-        border: 1px solid #52796F;
-        display: flex;
-        height: 400px;
-        justify-content: center;
-        position: relative;
-        width: 400px;
-        z-index: 1000;
-      }
-        .container-card img {
-          object-fit: cover;
-          height: 400px;
-          width: 400px;
-          transition: transform .2s; /* Animation */
-        }
+.button1 {
+  background-color: white;
+  color: black;
+  border: 2px solid #52796f;
+}
 
-        .container-card:hover {
-          transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-         }
+.button1:hover {
+  background-color: #52796f;
+  color: white;
+}
 
-         .button-benefits {
-          background-color: #52796F; /* Green */
-          border: none;
-          color: white;
-          padding: 8px 16px;
-          text-align: center;
-          text-decoration: none;
-          display: inline-block;
-          font-size: 16px;
-          margin: 2px 1px;
-          transition-duration: 0.4s;
-          cursor: pointer;
-          border-radius: 5px;
-          width: 100%;
-          margin-top: 0px;
-          margin-bottom: 70px;
-        }
-      
-        .button2 {
-          background-color: white; 
-          color: black; 
-          border: 2px solid #52796F;
-        }
-      
-        .button2:hover {
-          background-color: #52796F;
-          color: white;
-        }
-       
-      
+.container-two {
+  align-items: center;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  height: 65vh;
+  width: 100vw;
+}
+.container-card {
+  align-items: center;
+  background-color: #fff;
+  border: 1px solid #52796f;
+  display: flex;
+  height: 400px;
+  justify-content: center;
+  position: relative;
+  width: 400px;
+  z-index: 1000;
+}
+.container-card img {
+  object-fit: cover;
+  height: 400px;
+  width: 400px;
+  transition: transform 0.2s; /* Animation */
+}
 
+.container-card:hover {
+  transform: scale(
+    1.1
+  ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
 
+.button-benefits {
+  background-color: #52796f; /* Green */
+  border: none;
+  color: white;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 2px 1px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 100%;
+  margin-top: 0px;
+  margin-bottom: 70px;
+}
 
+.button2 {
+  background-color: white;
+  color: black;
+  border: 2px solid #52796f;
+}
+
+.button2:hover {
+  background-color: #52796f;
+  color: white;
+}
