--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -1,88 +1,84 @@
-* { box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+}
 
 .body {
-    display: grid;
-    /* place-items: center;
+  display: grid;
+  /* place-items: center;
     background: #703eff; */
-    margin: 0 auto;
-    font-family: poppins;
-    color: #3a334e;
-    animation: rotate 1s infinite alternate linear;
+  margin: 0 auto;
+  font-family: poppins;
+  color: #3a334e;
+  animation: rotate 1s infinite alternate linear;
 }
 
 @keyframes rotate {
-    100% { background-position: 0% 50%;}
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .login-card {
-    width: 400px;
-    border-radius: 1.25rem;
-    padding: 30px 30px 30px;
-    background: #CAD2C5;
-    text-align: center;
-    margin: 0 auto;
-    margin-top: 50px;
-    
+  width: 400px;
+  border-radius: 1.25rem;
+  padding: 30px 30px 30px;
+  background: #cad2c5;
+  text-align: center;
+  margin: 20px auto;
 }
 
 .login-card > h2 {
-    font-size: 36px;
-    font-weight: 600;
-    margin: 0 0 12px;
+  font-size: 36px;
+  font-weight: 600;
+  margin: 0 0 12px;
 }
 
 .login-card > h3 {
-    font-size: 1rem;
-    font-weight: 500;
-    margin: 0 0 20px;
-    color: #837f98;
+  font-size: 1rem;
+  font-weight: 500;
+  margin: 0 0 20px;
+  color: #837f98;
 }
 
 .login-form {
-    width: 100%;
-    margin: 0;
-    display: grid;
-    gap: 8px;
+  width: 100%;
+  margin: 0;
+  display: grid;
+  gap: 8px;
 }
 
 .login-form input.control::placeholder {
-    color: aaa7bc;
+  color: aaa7bc;
 }
 
 .login-form > button.control {
-    cursor: pointer;
-    width: 100%;
-    height: 56px;
-    padding: 0 16px;
-    background: #52796F;
-    color: #f9f9f9;
-    border: 0;
-    font-family: inherit;
-    font-size: 1rem;
-    font-weight: 600;
-    text-align: center;
-    letter-spacing: 2px;
-    transition: all 0.375s;
-}
-
-button {
-    background: transparent;
-    border: 0;
-    cursor: pointer;
+  cursor: pointer;
+  width: 100%;
+  height: 56px;
+  padding: 0 16px;
+  background: #52796f;
+  color: #f9f9f9;
+  border: 0;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: 2px;
+  transition: all 0.375s;
 }
 
 .control {
-    border: 0;
-    border-radius: 8px;
-    outline: none;
-    width: 100%;
-    height: 56px;
-    padding: 0 16px;
-    background: #edeaf7;
-    color: #5a4f79;
-    font-family: inherit;
-    font-size: 16px;
-    transition: 0.4s;
+  border: 0;
+  border-radius: 8px;
+  outline: none;
+  width: 100%;
+  height: 56px;
+  padding: 0 16px;
+  background: #edeaf7;
+  color: #5a4f79;
+  font-family: inherit;
+  font-size: 16px;
+  transition: 0.4s;
 }
 
 /* .password { position: relative;} */
